--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --text-primary : #262222;
     --text-secondary : #888888;
     --button-BG : #FFF3CF;
+    --button-BG-secondary : #f8e4a8;
     --button-side: #1E3D59;
 }
 
@@ -48,6 +49,8 @@
     justify-content: center;
     align-items: center;
     align-content: center;
+
+    display: none;
 }
 
 
@@ -59,6 +62,7 @@
 }
 
 #start-screen h1{
+    color: var(--text-primary);
     text-align: center;
     font-size: 1.5rem;
     margin: 0 1rem;
@@ -105,6 +109,95 @@
         font-size: 1.5rem;
         height: 2.4rem;
     }
+}
 
+
+/*-----------Quiz Screen---------------------*/
+
+#quiz-screen{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+#quiz-screen img{
+    margin: 2rem 0;
+}
+
+#question{
+    margin: 0 2rem 0.5rem 2rem;
+    text-align: center;
+}
+
+.choise-bg{
+    display: flex;
+    flex-direction: row;
+    background-color: var(--button-BG);
+    margin-top: 1.5rem;
+    align-items: center;
+    border-radius: 20px;
+    height: 2rem;
+    width: 70%;
+    max-width: 360px;
+    cursor: pointer;
+}
+
+.choise-bg:active{
+    background-color: var(--button-BG-secondary);
+}
+
+.number-bg{
+    width: 20%;
+    max-width: 50px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px ;
+    background-color: var(--button-side);
+    color: white;
+    margin-right: 1rem;
+}
+
+
+.progs-circle{
+    border: 50%;
+    width : 0.8rem;
+    height : 0.8rem;
+    border: 0.4px solid var(--button-side);
+    display: inline-block;
+    border-radius: 50%;
+    margin-top: 3rem;
+    margin-right : 0.2rem;
+}
+
+.correct{
+    border: 0;
+    background-color: var(--green);
+}
+
+.wrong{
+    border: 0;
+    background-color: var(--red);
+}
+
+
+/*BigScreen Adjustment*/
+@media screen and (min-width: 650px) {
+    #container{
+        height: auto;
+        width: 50vw;
+        box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+        margin: auto;
+        margin-top: 5%;
+        padding: 2rem;
+    }
+
+    #quiz-screen img{
+        margin: 0 0 1rem 0;
+    }
 
 }
